--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="profile-container">
         <div class="image-and-name">
           <img src="https://www.codedex.io/images/team/asiqur_animated.png" />
-          <h2>Asiqur Rahman</h2>
+          <h2>Asiqur Rahman Test</h2>
         </div>
         <div class="fun-fact">
           <h3>Fun fact about me:</h3>
